# agent-control-center

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  start.sh
backend/: .env.example  requirements.txt
backend/src/controlcenter/: config.py  main.py
backend/tests/: conftest.py  test_agent_models.py  test_agent_registry.py  test_api_agents.py  test_api_audit.py  test_api_settings.py  test_api_skills.py  test_api_workflows.py  test_audit_logger.py  test_communication_bus.py  test_config.py  test_database.py  test_skill_models.py  test_skill_parser.py  test_supervisor_parsing.py
docs/: api-spec.md  architecture-c4.md  architecture.md  constraints.md  domain-model.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useTour.ts
frontend/src/lib/: api.ts
frontend/src/pages/: AgentViewer.tsx  AuditLogs.tsx  Dashboard.tsx  Landing.tsx  Settings.tsx  SkillManager.tsx  WorkflowStudio.tsx
skills/: api-designer.skill.md  code-developer.skill.md  data-analyst.skill.md  example-researcher.skill.md  security-auditor.skill.md
src/agent_control_center/: __init__.py  config.py
src/agent_control_center/core/: agent_factory.py  agent_registry.py  llm_provider.py  tool_manager.py
src/agent_control_center/mcp/: mcp_client.py  mcp_server.py
src/agent_control_center/models/: __init__.py  agent_models.py  orchestration.py  skill_models.py
tests/: test_agent_registry.py  test_skill_parser.py  test_supervisor.py
(+44 files in other folders)
